# TrackClick

./: BUILD.md  CMakeLists.txt  README.md  app.rc  app.rc.in  audioclicklistener.cpp  audioclicklistener.h  clickinjector.cpp  clickinjector.h  dwellmanager.cpp  dwellmanager.h  macos_utils.h  macos_utils.mm  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  settingsdialog.cpp  settingsdialog.h
.github/workflows/: build.yml
docs/: INTERNAL.md  trackclick_class_diagram.drawio  trackclick_qase_testcases.csv
installer/: 71-trackclick-input.rules  Bundle.wxs  MacOSXBundleInfo.plist.in  TrackClick.desktop  TrackClick.wxs  postinst
tests/: CMakeLists.txt  tst_dwellmanager.cpp
translations/: trackclick_ar.ts  trackclick_bn.ts  trackclick_cs.ts  trackclick_es.ts  trackclick_fr.ts  trackclick_hi.ts  trackclick_ja.ts  trackclick_ko.ts  trackclick_pt.ts  trackclick_ru.ts  trackclick_ur.ts  trackclick_zh_CN.ts  tsparser.cpp  tsparser.h
